2008-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SyncImage): Re-implement using pixel iterators.
	(SortColormapByIntensity): Re-implement using pixel iterators.

2008-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c (QuantumGamma): Removed unnecessary OpenMP
	request on inner loops.
	* magick/enhance.c (EqualizeImage,NormalizeImage): Execute
	histogram generation pixel iterator with just one thread to
	decrease contention for the histogram array.
	* magick/pixel_iterator.c (InitializePixelIteratorOptions): New
	function to initialize PixelIteratorOptions with defaults.
	* magick/pixel_iterator.h (PixelIteratorOptions): New structure to
	support passing pixel iterator execution options.

2008-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated for changes to date in 1.3 development code.
	* magick/pixel_iterator.c: Execute pixel iterators in parallel via
	OpenMP.
	* magick/pixel_cache.c (OpenCacheView): Ensure that pixel cache is
	open.
	(GetCacheInfo): Allocate semaphore immediately.

2008-08-16  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c Writer now creates valid images according to
	http://fits.gsfc.nasa.gov/fits_verify.html
	Fixed problems: 1, zeros in HDU.
			2, wrong padding.
			3, possible strlen overflow.

2008-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{compare.c, channel.c, enhance.c, image.c, operator.c}:
	Update existing pixel iterator callback functions so that they are
	OpenMP safe.

2008-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compare.c (InitializeDifferenceImageOptions): Renamed
	from DifferenceImageOptionsDefaults().
	(InitializeDifferenceStatistics): New function to initialize
	DifferenceStatistics.
	(ComputeAbsoluteError, ComputePeakAbsoluteError,
	ComputeSquaredError): Use local totalizing structure on stack and
	update cumulative statistics when the loop terminates.
