@@ -26,6 +26,7 @@
 <UL>
   <LI> magick/image.c (SyncImage): Re-implement using pixel iterators.
         (SortColormapByIntensity): Re-implement using pixel iterators.
+        (ClipPathImage): Re-implement using pixel iterators.
 
 </UL>
 <p>
