@@ -2,6 +2,7 @@
 
 	* magick/image.c (SyncImage): Re-implement using pixel iterators.
 	(SortColormapByIntensity): Re-implement using pixel iterators.
+	(ClipPathImage): Re-implement using pixel iterators.
 
 2008-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
